@@ -15,3 +15,4 @@ For 0.2 :
 * Gérôme Fournier <>
 * Antons Rebguns  <arebgun@gmail.com>
 * Carl Chenet <chaica@ohmytux.com>
+* Jérôme Guelfucci <jerome.guelfucci@gmail.com>
