@@ -1,6 +1,7 @@
+	- Tooltips on buttons (thanks to Jerome Guelfucci)
 	- First unit tests by Carl Chenet
 	- Hotkeys goodness (patches from Antons Rebguns)
-	- Error, no crash if the XML file cannot be read (thanks Carl Chenet)
+	- Error, no crash if the XML file cannot be read (thanks to Carl Chenet)
 	- http:// links now open in the browser
 	- fix bug #339383 (delete subtask when deleting first char)
 	- Edit buttons : patches from Antons Rebguns 
